--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,8 +17,15 @@ jobs:
           python-version: 3.x
       - name: Install dependencies
         run: |
+          sudo apt-get update
+          sudo apt-get install python3-distutils  # Install distutils
           python -m pip install --upgrade pip
           pip install buildozer
+      - name: Debug information
+        run: |
+          echo "Python version: $(python --version)"
+          echo "Pip version: $(pip --version)"
+          echo "Buildozer version: $(buildozer --version)"
       - name: Build APK with Buildozer
         run: |
           buildozer android debug
