--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,7 +18,9 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install python3-dev build-essential  # Install necessary packages for building
+          sudo add-apt-repository universe  # Enable the universe repository
+          sudo apt-get update
+          sudo apt-get install python3-distutils python3-dev build-essential  # Install necessary packages
           python -m pip install --upgrade pip
           pip install buildozer
       - name: Debug information
